--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
         <div class="arrayMembers"></div>
         <div class="options">
             <div class="deleting">
-                <div> <input class="idInput" type="number" placeholder="enter id to delete user"> </div>
+                <div> <input class="idInput" name="id" type="number" placeholder="enter id to delete user"> </div>
                 <div> <button class="deleteButton">delete user</button> </div>
             </div>
             <div class="adding">
-                <div> <input class="nameInput" type="text" placeholder="enter new user's name to add"> </div>
+                <div> <input class="nameInput" name="name" type="text" placeholder="enter new user's name to add"> </div>
                 <div> <button class="addButton">add user</button> </div>
             </div>
         </div>
